--- a/index.html
+++ b/index.html
@@ -1,7 +1,8 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
+    <link rel="icon" type="icon" href="./src//assets/gemini_icon.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Gemini Clone</title>
   </head>
